fix: error overflow

--- a/src/client/stylesheets/core/_add-another.scss
+++ b/src/client/stylesheets/core/_add-another.scss
@@ -2,6 +2,10 @@
   position: relative;
 }
 
+.add-another .govuk-form-group {
+  clear: both;
+}
+
 .add-another .govuk-fieldset .govuk-fieldset__legend {
   position: relative;
   float: left;
